--- a/index.html
+++ b/index.html
@@ -6,17 +6,21 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" href="style.css" />
 </head>
+
 <body>
   <main class="app">
     <section class="card">
+
+      <!-- Manifesto -->
+      <div class="global-statement">
+        <strong>No sign-ups. No limits. No bullshit.</strong>
+        <span>
+          Runs 100% on your machine — not some greedy site charging you money
+          for using <em>your own hardware</em>.
+        </span>
+      </div>
+
       <!-- Top bar -->
-                         <div class="global-statement">
-  <strong>No sign-ups. No limits. No bullshit.</strong>
-  <span>
-    Runs 100% on your machine — not some greedy site charging you money
-    for using <em>your own hardware</em>.
-  </span>
-</div>
       <header class="topbar">
         <div class="brand">
           <div class="brand-mark">PB</div>
@@ -24,9 +28,8 @@
             <h1 class="brand-title">PixelBatch</h1>
             <p class="brand-subtitle">Bulk rename & resize — right in your browser.</p>
           </div>
-
-
         </div>
+
         <div class="topbar-right">
           <span class="pill pill-soft">100% offline</span>
           <span class="pill pill-outline">MIT open source</span>
@@ -37,75 +40,69 @@
             <span class="theme-label">Dark</span>
           </button>
         </div>
-
-
       </header>
 
-      <!-- Upload area -->
+      <!-- Upload -->
       <section class="card-section">
-        <label class="dropzone" for="fileInput">
+        <label class="dropzone">
           <div class="dropzone-icon">⬆️</div>
           <div class="dropzone-text">
             <strong>Drop images here</strong> or <span class="linkish">browse</span>
           </div>
-          <div class="dropzone-sub">
-            PNG, JPG, WEBP · Multiple files supported
-          </div>
+          <div class="dropzone-sub">PNG, JPG, WEBP · Multiple files</div>
           <input type="file" id="fileInput" accept="image/*" multiple />
         </label>
       </section>
 
-      <!-- Naming options -->
+      <!-- Naming -->
       <section class="card-section card-section-bordered">
         <div class="section-header">
           <h2 class="section-title">Naming</h2>
-          <p class="section-help">Control the new filenames for your processed images.</p>
+          <p class="section-help">Control output filenames.</p>
         </div>
 
         <div class="grid two-cols">
           <label class="field">
             <span class="field-label">Name prefix</span>
             <input type="text" id="namePattern" value="image_" />
-            <span class="field-hint">Example: <code>char_</code> → <code>char_001.png</code></span>
           </label>
 
           <label class="field">
             <span class="field-label">Start index</span>
-            <input type="number" id="startIndex" value="1" min="0" />
-            <span class="field-hint">Numbers auto-increment per file.</span>
+            <input type="number" id="startIndex" value="1" />
           </label>
         </div>
       </section>
 
-      <!-- Resize options -->
+      <!-- Resize -->
       <section class="card-section">
         <div class="section-header">
           <h2 class="section-title">Resize</h2>
-          <p class="section-help">Leave both fields empty to keep original size.</p>
+          <p class="section-help">Leave empty to keep original size.</p>
         </div>
 
         <div class="grid two-cols">
           <label class="field">
-            <span class="field-label">Target width (px)</span>
-            <input type="number" id="widthInput" placeholder="e.g. 512" min="1" />
+            <span class="field-label">Width (px)</span>
+            <input type="number" id="widthInput" />
           </label>
 
           <label class="field">
-            <span class="field-label">Target height (px)</span>
-            <input type="number" id="heightInput" placeholder="e.g. 512" min="1" />
+            <span class="field-label">Height (px)</span>
+            <input type="number" id="heightInput" />
           </label>
         </div>
 
         <label class="checkbox">
           <input type="checkbox" id="keepAspect" checked />
-          <span>Keep aspect ratio when only one dimension is set</span>
+          <span>Keep aspect ratio</span>
         </label>
 
         <div class="preset-row">
-          <span class="preset-label">Quick presets:</span>
-          <button type="button" class="chip" data-preset="512">512×512</button>
-          <button type="button" class="chip" data-preset="1024">1024×1024</button>
-          <button type="button" class="chip" data-preset="1280x720">1280×720</button>
+          <span class="preset-label">Presets:</span>
+          <button class="chip" data-preset="512">512×512</button>
+          <button class="chip" data-preset="1024">1024×1024</button>
+          <button class="chip" data-preset="1280x720">1280×720</button>
         </div>
       </section>
 
@@ -113,7 +110,7 @@
       <section class="card-section actions">
         <div class="actions-left">
           <button id="processBtn" class="btn primary">Process images</button>
-          <button id="downloadAllBtn" class="btn" disabled>Download all (ZIP)</button>
+          <button id="downloadAllBtn" class="btn" disabled>Download ZIP</button>
         </div>
         <div class="actions-right">
           <button id="clearBtn" class="btn subtle">Clear</button>
@@ -124,9 +121,6 @@
       <section class="card-section">
         <div class="section-header">
           <h2 class="section-title">Preview</h2>
-          <p class="section-help" id="previewHelp">
-            Drop some images and click <strong>Process images</strong> to see the resized & renamed versions here.
-          </p>
         </div>
         <div id="previewList" class="preview-grid"></div>
       </section>
@@ -134,79 +128,84 @@
       <!-- Footer -->
       <footer class="card-footer">
         <div class="footer-row">
-          <div class="footer-left" id="stats">
-            <span class="footer-text">No files processed yet.</span>
-          </div>
-          <div class="footer-right">
-            <span class="footer-text">
-              Made with vanilla JS · MIT licensed
-            </span>
-          </div>
+          <span class="footer-text">Made with vanilla JS · MIT Licensed</span>
         </div>
-        
       </footer>
+
     </section>
   </main>
 
-  <!-- Hidden canvas used for resizing -->
+  <!-- Hidden canvas -->
   <canvas id="hiddenCanvas" style="display:none;"></canvas>
 
+  <!-- Toast -->
+  <div id="easterEggToast" class="toast"></div>
+
+  <!-- Scripts -->
   <script src="libs/jszip.min.js"></script>
   <script src="script.js"></script>
+
   <script>
-    // --- Preset chips ---
-    const presetChips = document.querySelectorAll(".chip");
-
-    presetChips.forEach(chip => {
-      chip.addEventListener("click", () => {
-        const value = chip.getAttribute("data-preset");
-        const widthInputEl = document.getElementById("widthInput");
-        const heightInputEl = document.getElementById("heightInput");
-
-        if (value.includes("x")) {
-          const [w, h] = value.split("x").map(Number);
-          widthInputEl.value = w;
-          heightInputEl.value = h;
-        } else {
-          widthInputEl.value = value;
-          heightInputEl.value = value;
-        }
-      });
-    });
-
-    // --- Theme toggle ---
+    // ===== THEME =====
     const themeToggle = document.getElementById("themeToggle");
     const darkIcon = themeToggle.querySelector('[data-theme-icon="dark"]');
     const lightIcon = themeToggle.querySelector('[data-theme-icon="light"]');
     const themeLabel = themeToggle.querySelector(".theme-label");
-    const THEME_KEY = "pixelbatch-theme";
 
     function applyTheme(theme) {
-      if (theme === "light") {
-        document.body.classList.add("theme-light");
-        document.body.classList.remove("theme-dark");
-        lightIcon.style.display = "";
-        darkIcon.style.display = "none";
-        themeLabel.textContent = "Light";
-      } else {
-        document.body.classList.add("theme-dark");
-        document.body.classList.remove("theme-light");
-        darkIcon.style.display = "";
-        lightIcon.style.display = "none";
-        themeLabel.textContent = "Dark";
-      }
+      document.body.classList.toggle("theme-light", theme === "light");
+      document.body.classList.toggle("theme-dark", theme !== "light");
+      darkIcon.style.display = theme === "light" ? "none" : "";
+      lightIcon.style.display = theme === "light" ? "" : "none";
+      themeLabel.textContent = theme === "light" ? "Light" : "Dark";
     }
 
-    // Initial theme (from localStorage or default dark)
-    const storedTheme = localStorage.getItem(THEME_KEY);
-    applyTheme(storedTheme === "light" ? "light" : "dark");
+    applyTheme(localStorage.getItem("pixelbatch-theme") || "dark");
 
-    // Toggle on click
-    themeToggle.addEventListener("click", () => {
-      const isLight = document.body.classList.contains("theme-light");
-      const next = isLight ? "dark" : "light";
+    themeToggle.onclick = () => {
+      const next = document.body.classList.contains("theme-light") ? "dark" : "light";
       applyTheme(next);
-      localStorage.setItem(THEME_KEY, next);
+      localStorage.setItem("pixelbatch-theme", next);
+    };
+
+    // ===== TOAST =====
+    const toast = document.getElementById("easterEggToast");
+    let toastTimer;
+
+    function showToast(msg) {
+      toast.textContent = msg;
+      toast.classList.add("show");
+      clearTimeout(toastTimer);
+      toastTimer = setTimeout(() => toast.classList.remove("show"), 3000);
+    }
+
+    // ===== EASTER EGGS =====
+
+    // Logo click x5
+    const brand = document.querySelector(".brand-mark");
+    let clicks = 0, t;
+
+    brand.onclick = () => {
+      clicks++;
+      clearTimeout(t);
+      t = setTimeout(() => clicks = 0, 1000);
+      if (clicks === 5) {
+        clicks = 0;
+        showToast("🖕 Fuck paywalled image tools. This one stays free and local.");
+      }
+    };
+
+    // Type "pixel"
+    const seq = ["p","i","x","e","l"];
+    let buf = [];
+
+    window.addEventListener("keydown", e => {
+      if (e.key.length !== 1) return;
+      buf.push(e.key.toLowerCase());
+      if (buf.length > seq.length) buf.shift();
+      if (seq.every((c,i)=>c===buf[i])) {
+        showToast("🐰 Open-source or nothing. Fuck closed-source crap.");
+      }
     });
   </script>
 </body>
