--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
 <body>
   <main class="app">
     <section class="card">
-
-      <!-- Manifesto -->
+      <!-- Manifesto banner -->
       <div class="global-statement">
         <strong>No sign-ups. No limits. No bullshit.</strong>
         <span>
@@ -29,7 +28,6 @@
             <p class="brand-subtitle">Bulk rename & resize — right in your browser.</p>
           </div>
         </div>
-
         <div class="topbar-right">
           <span class="pill pill-soft">100% offline</span>
           <span class="pill pill-outline">MIT open source</span>
@@ -42,67 +40,71 @@
         </div>
       </header>
 
-      <!-- Upload -->
+      <!-- Upload area -->
       <section class="card-section">
-        <label class="dropzone">
+        <label class="dropzone" for="fileInput">
           <div class="dropzone-icon">⬆️</div>
           <div class="dropzone-text">
             <strong>Drop images here</strong> or <span class="linkish">browse</span>
           </div>
-          <div class="dropzone-sub">PNG, JPG, WEBP · Multiple files</div>
+          <div class="dropzone-sub">
+            PNG, JPG, WEBP · Multiple files supported
+          </div>
           <input type="file" id="fileInput" accept="image/*" multiple />
         </label>
       </section>
 
-      <!-- Naming -->
+      <!-- Naming options -->
       <section class="card-section card-section-bordered">
         <div class="section-header">
           <h2 class="section-title">Naming</h2>
-          <p class="section-help">Control output filenames.</p>
+          <p class="section-help">Control the new filenames for your processed images.</p>
         </div>
 
         <div class="grid two-cols">
           <label class="field">
             <span class="field-label">Name prefix</span>
             <input type="text" id="namePattern" value="image_" />
+            <span class="field-hint">Example: <code>char_</code> → <code>char_001.png</code></span>
           </label>
 
           <label class="field">
             <span class="field-label">Start index</span>
-            <input type="number" id="startIndex" value="1" />
+            <input type="number" id="startIndex" value="1" min="0" />
+            <span class="field-hint">Numbers auto-increment per file.</span>
           </label>
         </div>
       </section>
 
-      <!-- Resize -->
+      <!-- Resize options -->
       <section class="card-section">
         <div class="section-header">
           <h2 class="section-title">Resize</h2>
-          <p class="section-help">Leave empty to keep original size.</p>
+          <p class="section-help">Leave both fields empty to keep original size.</p>
         </div>
 
         <div class="grid two-cols">
           <label class="field">
-            <span class="field-label">Width (px)</span>
-            <input type="number" id="widthInput" />
+            <span class="field-label">Target width (px)</span>
+            <input type="number" id="widthInput" placeholder="e.g. 512" min="1" />
           </label>
 
           <label class="field">
-            <span class="field-label">Height (px)</span>
-            <input type="number" id="heightInput" />
+            <span class="field-label">Target height (px)</span>
+            <input type="number" id="heightInput" placeholder="e.g. 512" min="1" />
           </label>
         </div>
 
         <label class="checkbox">
           <input type="checkbox" id="keepAspect" checked />
-          <span>Keep aspect ratio</span>
+          <span>Keep aspect ratio when only one dimension is set</span>
         </label>
 
         <div class="preset-row">
-          <span class="preset-label">Presets:</span>
-          <button class="chip" data-preset="512">512×512</button>
-          <button class="chip" data-preset="1024">1024×1024</button>
-          <button class="chip" data-preset="1280x720">1280×720</button>
+          <span class="preset-label">Quick presets:</span>
+          <button type="button" class="chip" data-preset="512">512×512</button>
+          <button type="button" class="chip" data-preset="1024">1024×1024</button>
+          <button type="button" class="chip" data-preset="1280x720">1280×720</button>
         </div>
       </section>
 
@@ -110,7 +112,7 @@
       <section class="card-section actions">
         <div class="actions-left">
           <button id="processBtn" class="btn primary">Process images</button>
-          <button id="downloadAllBtn" class="btn" disabled>Download ZIP</button>
+          <button id="downloadAllBtn" class="btn" disabled>Download all (ZIP)</button>
         </div>
         <div class="actions-right">
           <button id="clearBtn" class="btn subtle">Clear</button>
@@ -121,6 +123,9 @@
       <section class="card-section">
         <div class="section-header">
           <h2 class="section-title">Preview</h2>
+          <p class="section-help" id="previewHelp">
+            Drop some images and click <strong>Process images</strong> to see the resized & renamed versions here.
+          </p>
         </div>
         <div id="previewList" class="preview-grid"></div>
       </section>
@@ -128,83 +133,147 @@
       <!-- Footer -->
       <footer class="card-footer">
         <div class="footer-row">
-          <span class="footer-text">Made with vanilla JS · MIT Licensed</span>
+          <div class="footer-left" id="stats">
+            <span class="footer-text">No files processed yet.</span>
+          </div>
+          <div class="footer-right">
+            <span class="footer-text">
+              Made with vanilla JS · MIT licensed
+            </span>
+          </div>
         </div>
       </footer>
-
     </section>
   </main>
 
-  <!-- Hidden canvas -->
+  <!-- Hidden canvas used for resizing -->
   <canvas id="hiddenCanvas" style="display:none;"></canvas>
 
-  <!-- Toast -->
-  <div id="easterEggToast" class="toast"></div>
+  <!-- Toast for easter eggs -->
+  <div id="easterEggToast" class="toast" aria-hidden="true"></div>
 
-  <!-- Scripts -->
   <script src="libs/jszip.min.js"></script>
   <script src="script.js"></script>
 
   <script>
-    // ===== THEME =====
+    // --- Preset chips ---
+    const presetChips = document.querySelectorAll(".chip");
+
+    presetChips.forEach(chip => {
+      chip.addEventListener("click", () => {
+        const value = chip.getAttribute("data-preset");
+        const widthInputEl = document.getElementById("widthInput");
+        const heightInputEl = document.getElementById("heightInput");
+
+        if (value.includes("x")) {
+          const [w, h] = value.split("x").map(Number);
+          widthInputEl.value = w;
+          heightInputEl.value = h;
+        } else {
+          widthInputEl.value = value;
+          heightInputEl.value = value;
+        }
+      });
+    });
+
+    // --- Theme toggle ---
     const themeToggle = document.getElementById("themeToggle");
     const darkIcon = themeToggle.querySelector('[data-theme-icon="dark"]');
     const lightIcon = themeToggle.querySelector('[data-theme-icon="light"]');
     const themeLabel = themeToggle.querySelector(".theme-label");
+    const THEME_KEY = "pixelbatch-theme";
 
     function applyTheme(theme) {
-      document.body.classList.toggle("theme-light", theme === "light");
-      document.body.classList.toggle("theme-dark", theme !== "light");
-      darkIcon.style.display = theme === "light" ? "none" : "";
-      lightIcon.style.display = theme === "light" ? "" : "none";
-      themeLabel.textContent = theme === "light" ? "Light" : "Dark";
-    }
-
-    applyTheme(localStorage.getItem("pixelbatch-theme") || "dark");
-
-    themeToggle.onclick = () => {
-      const next = document.body.classList.contains("theme-light") ? "dark" : "light";
-      applyTheme(next);
-      localStorage.setItem("pixelbatch-theme", next);
-    };
-
-    // ===== TOAST =====
-    const toast = document.getElementById("easterEggToast");
-    let toastTimer;
-
-    function showToast(msg) {
-      toast.textContent = msg;
-      toast.classList.add("show");
-      clearTimeout(toastTimer);
-      toastTimer = setTimeout(() => toast.classList.remove("show"), 3000);
-    }
-
-    // ===== EASTER EGGS =====
-
-    // Logo click x5
-    const brand = document.querySelector(".brand-mark");
-    let clicks = 0, t;
-
-    brand.onclick = () => {
-      clicks++;
-      clearTimeout(t);
-      t = setTimeout(() => clicks = 0, 1000);
-      if (clicks === 5) {
-        clicks = 0;
-        showToast("🖕 Fuck paywalled image tools. This one stays free and local.");
+      if (theme === "light") {
+        document.body.classList.add("theme-light");
+        document.body.classList.remove("theme-dark");
+        lightIcon.style.display = "";
+        darkIcon.style.display = "none";
+        themeLabel.textContent = "Light";
+      } else {
+        document.body.classList.add("theme-dark");
+        document.body.classList.remove("theme-light");
+        darkIcon.style.display = "";
+        lightIcon.style.display = "none";
+        themeLabel.textContent = "Dark";
       }
-    };
+    }
 
-    // Type "pixel"
-    const seq = ["p","i","x","e","l"];
-    let buf = [];
+    // Initial theme (from localStorage or default dark)
+    const storedTheme = localStorage.getItem(THEME_KEY);
+    applyTheme(storedTheme === "light" ? "light" : "dark");
 
-    window.addEventListener("keydown", e => {
-      if (e.key.length !== 1) return;
-      buf.push(e.key.toLowerCase());
-      if (buf.length > seq.length) buf.shift();
-      if (seq.every((c,i)=>c===buf[i])) {
-        showToast("🐰 Open-source or nothing. Fuck closed-source crap.");
+    // Toggle on click
+    themeToggle.addEventListener("click", () => {
+      const isLight = document.body.classList.contains("theme-light");
+      const next = isLight ? "dark" : "light";
+      applyTheme(next);
+      localStorage.setItem(THEME_KEY, next);
+    });
+
+    // ===== Toast helper =====
+    const toastEl = document.getElementById("easterEggToast");
+    let toastTimer = null;
+
+    function showToast(message) {
+      if (!toastEl) return;
+
+      toastEl.textContent = message;
+      toastEl.classList.add("show");
+      toastEl.setAttribute("aria-hidden", "false");
+
+      if (toastTimer) clearTimeout(toastTimer);
+      toastTimer = setTimeout(() => {
+        toastEl.classList.remove("show");
+        toastEl.setAttribute("aria-hidden", "true");
+      }, 3000);
+    }
+
+    // ===== Easter egg: logo click 5x =====
+    const brandMark = document.querySelector(".brand-mark");
+    let brandClickCount = 0;
+    let brandClickTimer = null;
+
+    if (brandMark) {
+      brandMark.addEventListener("click", () => {
+        brandClickCount++;
+
+        if (brandClickTimer) clearTimeout(brandClickTimer);
+        brandClickTimer = setTimeout(() => {
+          brandClickCount = 0;
+        }, 1000);
+
+        if (brandClickCount === 5) {
+          brandClickCount = 0;
+          showToast("🖕 Fuck paywalled image tools. This one stays free, local, and yours.");
+        }
+      });
+
+      // Hidden manifesto: double-click logo → about.html
+      brandMark.addEventListener("dblclick", () => {
+        window.location.href = "about.html";
+      });
+    }
+
+    // ===== Easter egg: type "pixel" =====
+    const secretSequence = ["p", "i", "x", "e", "l"];
+    let keyBuffer = [];
+
+    window.addEventListener("keydown", (event) => {
+      const key = event.key.toLowerCase();
+      if (key.length !== 1) return;
+
+      keyBuffer.push(key);
+      if (keyBuffer.length > secretSequence.length) {
+        keyBuffer.shift();
+      }
+
+      const matched = secretSequence.every(
+        (char, index) => keyBuffer[index] === char
+      );
+
+      if (matched) {
+        showToast("🐰 You typed PIXEL. Open-source or nothing. Fuck the closed crap.");
       }
     });
   </script>
